# agentweave

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  config.json
backend/: db.py  main.py  pyproject.toml
backend/src/: __init__.py  agent.py  base_server.py  base_task_manager.py  helpers.py  llm_factory.py  llm_provider.py  task_manager.py
frontend/: express-server.js  package.json  tailwind.config.js
frontend/public/: index.html
frontend/python-server/: card_resolver.py  client.py  push_notification_listener.py  pyproject.toml  server.py
frontend/src/: App.tsx  chatwindow-error.css  index.css  index.tsx
frontend/src/components/: AboutPopup.tsx  AgentDetailsPopup.tsx  AgentsView.tsx  ChatWindow.tsx  EngineView.tsx  EnvConfigPopup.tsx  MainContent.tsx  Sidebar.tsx  ThemePopup.tsx  agentApi.ts  llmProviderApi.ts
frontend/src/components/agent/: AgentCard.tsx  AgentCardSkeleton.tsx  AgentSkill.tsx  AgentsView.tsx
frontend/src/styles/: agentCard.css  agentCardAnimations.css  agentCardThemes.css
frontend/src/types/: agentTypes.ts
frontend/src/utils/: api.ts  colorUtils.ts
scripts/: start-backend.sh  start-frontend.sh
utils/: __init__.py  logger.py  push_notification_auth.py  shared_config.py
