[project]
name = "a2a-sample-client-cli"
version = "0.1.0"
description = "A CLI application that demonstrates the capabilities of an A2AClient."
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "asyncclick>=8.1.8",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "pydantic>=2.10.6",
    "jwcrypto>=1.5.6",
    "pyjwt>=2.10.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.7"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
#a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
